Media Query Updated For 576px

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="left_sec">
 
-          <h1>Build The Community <br> Fans Will Love</h1>
+          <h1>Build The Community <br>Your Fans Will Love</h1>
           <p> Huddle re-imagines the way we build communities. You have <br> voice, but so does your audience. 
             Create connections with <br> your users as you engage in genuine discussion.</p>
           <button class="btn">Get Started For Free</button>
@@ -47,7 +47,7 @@
     <section class="second_container">
 
       <div class="box box-1">
-       <h3 class="box-h"> Grow Together</h3>
+       <h2 class="box-h"> Grow Together</h2>
        <p class="box_p">Generate meaningful discussions with your audience and build a strong, loyal community. 
         Think of the insightful conversations you miss out on with a feedback form. </p>
       </div>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="box box-4">
-      <h3 class="box-h">Flowing Conversations</h3>
+      <h2 class="box-h">Flowing Conversations</h2>
       <p class="box_p">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
         have just-in-time loading for a more natural flow.</p>
     </div>
@@ -76,7 +76,7 @@
    <!-- fourth_container -->
    <section class="fourth_container">
     <div class="box box-5">
-     <h3 class="box-h"> Your Users</h3>
+     <h2 class="box-h"> Your Users</h2>
      <p class="box_p"> It takes no time at all to integrate Huddle with your app's authentication solution. 
       This means, once signed in to your app, your users can start chatting immediately.</p>
     </div>
