--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@700&family=Poppins:wght@200;300;900&family=Rowdies:wght@300;700&family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
   <style>
-    .attribution { font-size: 18px; text-align: center; }
+    .attribution { text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
     .attribution {padding: 20px 0;}
   </style>
